scratch/build_errors_4.txt
BUILD STDOUT:
Using configuration: sim
Building sim
Cactus - version: 4.2.3
Building configuration sim
Checking status of thorn CoordBase
Checking status of thorn Boundary
Checking status of thorn ADMCoupling
Checking status of thorn ADMMacros
Checking status of thorn ADMMass
Checking status of thorn AEILocalInterp
Checking status of thorn zlib
Checking status of thorn GenericFD
Checking status of thorn CycleClock
Checking status of thorn Vectors
Checking status of thorn IOUtil
Checking status of thorn Fortran
Checking status of thorn CarpetRegridTest
Checking status of thorn CarpetTracker
Checking status of thorn Constants
Checking status of thorn Convert_to_HydroBase
Checking status of thorn CoordGauge
Checking status of thorn DemoInterp
Checking status of thorn SphericalSurface
Checking status of thorn DistortedBHIVP
Checking status of thorn EOS_Base
Checking status of thorn EOS_IdealFluid
Checking status of thorn EinsteinExact_Test
Checking status of thorn EllBase
Checking status of thorn OpenBLAS
Checking status of thorn Exact
Checking status of thorn Extract
Checking status of thorn FFTW3
Checking status of thorn FleshInfo
Checking status of thorn GSL
Checking status of thorn Socket
Checking status of thorn pthreads
Checking status of thorn HelloWorld
Checking status of thorn HighOrderWaveTest
Checking status of thorn HydroBase
Checking status of thorn Hydro_InitExcision
Checking status of thorn IDAnalyticBH
Checking status of thorn IDAxiBrillBH
Checking status of thorn IDAxiOddBrillBH
Checking status of thorn IDConstraintViolate
Checking status of thorn IDFileADM
Checking status of thorn IDLinearWaves
Checking status of thorn IDScalarWave
Checking status of thorn IDScalarWaveC
Checking status of thorn IDScalarWaveCXX
Checking status of thorn IDScalarWaveElliptic
Checking status of thorn IDWaveMoL
Checking status of thorn ID_converter_ILGRMHD
Checking status of thorn IOASCII
Checking status of thorn IOBasic
Checking status of thorn libjpeg
Checking status of thorn InitBase
Checking status of thorn InterpToArray
Checking status of thorn LORENE
Checking status of thorn LocalInterp
Checking status of thorn LocalInterp2
Checking status of thorn LocalReduce
Checking status of thorn ML_BSSN_Test
Checking status of thorn ML_CCZ4_Test
Checking status of thorn ML_WaveToy_Test
Checking status of thorn Meudon_Bin_BH
Checking status of thorn Meudon_Bin_NS
Checking status of thorn Meudon_Mag_NS
Checking status of thorn MoL
Checking status of thorn NaNCatcher
Checking status of thorn NaNChecker
Checking status of thorn NewRad
Checking status of thorn Nice
Checking status of thorn Noise
Checking status of thorn Norms
Checking status of thorn NullDecomp
Checking status of thorn NullGrid
Checking status of thorn NullVars
Checking status of thorn OpenSSL
Checking status of thorn Outflow
Checking status of thorn PAPI
Checking status of thorn TATelliptic
Checking status of thorn PunctureTracker
Checking status of thorn TGRtensor
Checking status of thorn ReductionTest
Checking status of thorn ReductionTest2
Checking status of thorn ReductionTest3
Checking status of thorn ReflectionSymmetry
Checking status of thorn RegridSyncTest
Checking status of thorn RotatingDBHIVP
Checking status of thorn SampleBoundary
Checking status of thorn SampleIO
Checking status of thorn Seed_Magnetic_Fields
COMPILING arrangements/CactusExamples/SampleBoundary/src/Register.c
In file included from /opt/Cactus/arrangements/CactusExamples/SampleBoundary/src/Register.c:13:0:
/opt/Cactus/arrangements/CactusExamples/SampleBoundary/src/SampleBnd.h:62:17: error: 'CCTK_FNAME' declared as function returning a function
 void CCTK_FCALL CCTK_FNAME(Linear_extrap_one_bndry)(int *doBC, 
                 ^
/opt/Cactus/arrangements/CactusExamples/SampleBoundary/src/SampleBnd.h:64:53: warning: parameter names (without types) in function declaration
                                                     CCTK_REAL *var_ptr);
                                                     ^
/opt/Cactus/arrangements/CactusExamples/SampleBoundary/src/Register.c: In function 'SampleBoundary_RegisterBCs':
/opt/Cactus/arrangements/CactusExamples/SampleBoundary/src/Register.c:76:37: warning: passing argument 2 of 'Boundary_RegisterPhysicalBC' from incompatible pointer type [-Wincompatible-pointer-types]
                                     (phys_bc_fn_ptr) &BndLinExtrap,
                                     ^
In file included from /opt/Cactus/configs/sim/bindings/include/SampleBoundary/cctk_Functions.h:23:0,
                 from /opt/Cactus/src/include/cctk_core.h:145,
                 from /opt/Cactus/configs/sim/bindings/include/SampleBoundary/cctk.h:7,
                 from /opt/Cactus/arrangements/CactusExamples/SampleBoundary/src/Register.c:11:
/opt/Cactus/configs/sim/bindings/include/SampleBoundary_Prototypes.h:18:10: note: expected 'CCTK_INT4 (* const)(const void * const,  const CCTK_INT4,  const CCTK_INT4 *, const CCTK_INT4 *, const CCTK_INT4 *, const CCTK_INT4 *) {aka int (* const)(const void * const,  const int,  const int *, const int *, const int *, const int *)}' but argument is of type 'int (*)(const cGH *, int,  int *, int *, int *, int *) {aka int (*)(const struct _cGH *, int,  int *, int *, int *, int *)}'
 CCTK_INT Boundary_RegisterPhysicalBC(const CCTK_POINTER_TO_CONST GH ,
          ^
/opt/Cactus/configs/sim/config-data/make.config.rules:259: recipe for target 'Register.c.o' failed
make[3]: *** [Register.c.o] Error 1
/opt/Cactus/lib/make/make.thornlib:112: recipe for target 'make.checked' failed
make[2]: *** [make.checked] Error 2
/opt/Cactus/lib/make/make.configuration:181: recipe for target '/opt/Cactus/configs/sim/lib/libthorn_SampleBoundary.a' failed
make[1]: *** [/opt/Cactus/configs/sim/lib/libthorn_SampleBoundary.a] Error 2
make[1]: *** Waiting for unfinished jobs....
Makefile:256: recipe for target 'sim' failed
make: *** [sim] Error 2


BUILD STDERR:
Warning: default thorn list contents have changed
